z-index bug fixed

--- a/css/main-I.css
+++ b/css/main-I.css
@@ -444,6 +444,7 @@ input[type="submit"].dark-gray-bg:hover {
   position: absolute;
   bottom: -40px;
   right: 0;
+  z-index: 1;
 }
 
 .icn {
